# aladin

./: .gitignore  CMakeLists.txt  ReadMe.md  ReadMe.txt  make.mak  makefile
doxy/: config  doxygen.css
inc/: common.h  kernels.cuh
inc/aladin/: TemplateLibrary.h  aladin.h  linear_algebraic_structures.h
src/: kernel.cu  test.cpp
windows/: aladin.sln
windows/aladin/: aladin.vcxproj  aladin.vcxproj.filters
windows/test/: test.vcxproj  test.vcxproj.filters
windows/test_cuda/: test_cuda.vcxproj
